--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
         <title>Like Me!</title>
     </head>
     <body>
-        <div class="app">
-          
-        </div>
+        <!--************************************************************-->
+        <header class="header">
+            LikeMe!
+        </header>
+
+        <section class="view">
+
+        </section>
+
+        <nav class="nav">
+            <a href="#profil"></a>
+            <a href="#takepicture"></a>
+            <a href="#rank"></a>
+        </nav>
         <!--************************************************************-->
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
