--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <!--<meta name="format-detection" content="telephone=no" />-->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/icon.css" />
         <title>Like Me!</title>
     </head>
     <body>
@@ -18,9 +19,9 @@
         </section>
 
         <nav class="nav">
-            <a href="#profil"></a>
-            <a href="#takepicture"></a>
-            <a href="#rank"></a>
+            <a href="#profil"><span class="icon-eye"></span></a>
+            <a href="#takepicture" id="camera"><span class="icon-camera"></span></a>
+            <a href="#rank"><span class="icon-star"></span></a>
         </nav>
         <!--************************************************************-->
         <script type="text/javascript" src="cordova.js"></script>
