--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         </header>
 
         <section class="view">
-
+            <section class="panel">
+                <img src="img/lkm.png" class="current_like"/>
+            </section>
         </section>
 
         <nav class="nav">
             <a href="#profil"><span class="icon-eye"></span></a>
-            <a href="#takepicture" id="camera"><span class="icon-camera"></span></a>
+            <a href="#takepicture" id="camera" class="active"><span class="icon-camera"></span></a>
             <a href="#rank"><span class="icon-star"></span></a>
         </nav>
         <!--************************************************************-->
